--- a/code/Makefile.common
+++ b/code/Makefile.common
@@ -97,7 +97,8 @@ USERPROG_HDR = userprog/address_space.hh            \
                machine/instruction.hh               \
                machine/machine.hh                   \
                machine/mmu.hh                       \
-               machine/translation_entry.hh
+               machine/translation_entry.hh         \
+               userprog/synch_console.hh
 USERPROG_SRC = userprog/address_space.cc            \
                userprog/args.cc                     \
                userprog/debugger.cc                 \
@@ -114,7 +115,8 @@ USERPROG_SRC = userprog/address_space.cc            \
                machine/instruction.cc               \
                machine/machine.cc                   \
                machine/mips_sim.cc                  \
-               machine/mmu.cc
+               machine/mmu.cc                       \
+               userprog/synch_console.cc
 
 VMEM_HDR =
 VMEM_SRC =
