--- a/code/Makefile.common
+++ b/code/Makefile.common
@@ -90,6 +90,7 @@ USERPROG_HDR = userprog/address_space.hh            \
                filesys/file_system.hh               \
                filesys/open_file.hh                 \
                lib/bitmap.hh                        \
+               lib/coremap.hh                       \
                machine/console.hh                   \
                machine/encoding.hh                  \
                machine/endianness.hh                \
@@ -108,6 +109,7 @@ USERPROG_SRC = userprog/address_space.cc            \
                userprog/prog_test.cc                \
                userprog/transfer.cc                 \
                lib/bitmap.cc                        \
+               lib/coremap.cc                       \
                machine/console.cc                   \
                machine/encoding.cc                  \
                machine/endianness.cc                \
