--- a/code/Makefile.common
+++ b/code/Makefile.common
@@ -123,21 +123,25 @@ USERPROG_SRC = userprog/address_space.cc            \
 VMEM_HDR =
 VMEM_SRC =
 
-FILESYS_HDR = filesys/directory.hh       \
-              filesys/directory_entry.hh \
-              filesys/file_header.hh     \
-              filesys/file_system.hh     \
-              filesys/open_file.hh       \
-              filesys/raw_directory.hh   \
-              filesys/raw_file_header.hh \
-              filesys/synch_disk.hh      \
+FILESYS_HDR = filesys/directory.hh                  \
+              filesys/directory_entry.hh            \
+              filesys/file_header.hh                \
+              filesys/file_system.hh                \
+              filesys/open_file.hh                  \
+              filesys/raw_directory.hh              \
+              filesys/raw_file_header.hh            \
+              filesys/synch_disk.hh                 \
+              filesys/open_file_list.hh             \
+              filesys/read_write_controller.hh      \
               machine/disk.hh
-FILESYS_SRC = filesys/directory.cc   \
-              filesys/file_header.cc \
-              filesys/file_system.cc \
-              filesys/fs_test.cc     \
-              filesys/open_file.cc   \
-              filesys/synch_disk.cc  \
+FILESYS_SRC = filesys/directory.cc                  \
+              filesys/file_header.cc                \
+              filesys/file_system.cc                \
+              filesys/fs_test.cc                    \
+              filesys/open_file.cc                  \
+              filesys/synch_disk.cc                 \
+              filesys/open_file_list.cc             \
+              filesys/read_write_controller.cc      \
               machine/disk.cc
 
 NETWORK_HDR = network/post.hh \
